--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #101010;
-    padding: 0 10%;
+    padding: 1em;
   }
   
   .logo {
@@ -45,3 +45,16 @@
     padding: 0 1rem;
     margin-left: 0.5rem;
   }
+
+  @media (max-width: 500px) {
+    .logo{
+      font-size: 1.22rem;
+    }
+    .header ul{
+    flex-direction: column;
+    }
+    .header{
+    height: 10rem;
+    flex-direction: column;
+    }
+} 
